# ola-de-frio

./: LICENSE  Makefile  README.md  pyproject.toml
data/interim/: Boletín Meteorológico de Río Grande, Tierra del Fuego, República Argentina ( 201801 ).txt
docs/: hola  mkdocs.yml
docs/docs/: index.md
notebooks/: Prediccion_de_una_ola_Frio.ipynb  Unificacion_del_dataset_OLA_DE_FRIO.ipynb
prediccion_olas/: __init__.py  dataset.py  features.py  plots.py
prediccion_olas/modeling/: predict.py  train.py
