[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prediccion_olas"
version = "0.0.1"
description = "Predicci\u00f3n de olas de fr\u00edo en la provincia de Tierra del Fuego utilizando t\u00e9cnicas de Machine Learning"
authors = [
  { name = "abigail" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["prediccion_olas"]
include = ["pyproject.toml", "prediccion_olas/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prediccion_olas"]
force-sort-within-sections = true

